# salvo-playground

./: .gitignore  .ignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yaml
src/: controllers.rs  lib.rs  main.rs  models.rs  routes.rs
tests/: handle4xx.rs  index.rs  users.rs
