[package]
name = "salvo_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = "0.68.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}

[dev-dependencies]
salvo_core = "0.68.5"
